--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/moment": "2.13.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-responsive": "8.0.2",
+    "moment": "2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-responsive": "8.1.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2",
     "styled-components": "5.2.0"
