--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-responsive": "8.0.2",
+    "cors-anywhere": "0.4.3",
     "moment": "2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-responsive": "8.1.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2",
-    "styled-components": "5.2.0"
+    "styled-components": "5.2.0",
+    "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run proxy & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "proxy": "node proxy-server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
