--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-responsive": "8.0.2",
+    "axios": "0.20.0",
     "cors-anywhere": "0.4.3",
     "moment": "2.29.1",
     "react": "^16.13.1",
