--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "proxy": "node proxy-server.js"
+    "proxy": "node proxy-server.js",
+    "codeFormat": "prettier src/*.tsx --write"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "5.1.3"
+    "@types/styled-components": "5.1.3",
+    "prettier": "2.1.2"
   }
 }
