--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
     "proxy": "node proxy-server.js",
     "codeFormat": "prettier src/*.tsx --write"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/*.tsx": "npm run codeFormat"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -47,6 +55,8 @@
   },
   "devDependencies": {
     "@types/styled-components": "5.1.3",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "husky": "4.3.0",
+    "lint-staged": "10.4.0"
   }
 }
