--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "start": "npm run proxy & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "yarn test --watchAll=false --coverage",
     "eject": "react-scripts eject",
     "proxy": "node proxy-server.js",
     "codeFormat": "prettier src/*.tsx --write"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn run test --watchAll=false"
     }
   },
   "lint-staged": {
