--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "npm run proxy & react-scripts start",
+    "start": "npm-run-all --parallel proxy start:cra",
+    "start:cra": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:coverage": "yarn test --watchAll=false --coverage",
@@ -57,8 +58,9 @@
   },
   "devDependencies": {
     "@types/styled-components": "5.1.3",
-    "prettier": "2.1.2",
     "husky": "4.3.0",
-    "lint-staged": "10.4.0"
+    "lint-staged": "10.4.0",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.1.2"
   }
 }
